--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "experss": "^0.0.1-security",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
